--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -5,6 +5,16 @@
   animation: meals-appear 1s ease-out forwards;
 }
 
+.MealsLoading {
+  text-align: center;
+  color: black;
+}
+
+.MealError {
+  text-align: center;
+  color: #ff0000;
+}
+
 .meals ul {
   list-style: none;
   margin: 0;
